--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="headerh1">Aitor Sanchez personal website</h1>
+        <h2 class="headerh2">I will post some of my stuff here</h2>
+    </header>
+    <nav>
+        <ul class="navul">
+            <li class="navbarli"><a href="index.html">Home</a></li>
+            <li class="navbarli"><a href="">Blog</a></li>
+            <li class="navbarli"><a href="">Portfolio</a></li>
+            <li class="navbarli"><a href="">Contact</a></li>
+        </ul>
+    </nav> 
+
+    <article>
+        
+    </article>
+    <footer>
+
+    </footer>
 </body>
 </html>
